font size update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/queries.css">
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -126,7 +126,8 @@
                         <h2>I'm Amy, and I'd love to work on your next project</h2>
                     </div>
                     <div class="consultant-paragraph">
-                        <p>I love working with others to create beautiful design solutions. I've designed everything from brand illustrations to complete mobile apps. I'm also handy with a camera!</p>
+                        <p>I love working with others to create beautiful design solutions. I've designed everything
+                            from brand illustrations to complete mobile apps. I'm also handy with a camera!</p>
                     </div>
                     <div class="consultant-button">
                         <p><a href="#" class="free-light">Free Consultation</a></p>
@@ -146,27 +147,27 @@
                     <!-- Swiper -->
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="img/display-1.jpg" alt="">
+                            <div class="swiper-slide">
+                                <img src="img/display-1.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="img/display-2.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="img/display-3.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="img/display-4.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="img/display-5.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="img/display-2.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/display-3.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/display-4.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/display-5.jpg" alt="">
-                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                     </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- booking -->
     <section id="booking-section">
@@ -175,9 +176,10 @@
                 <div class="booking-head">
                     <h3>Book a call with me</h3>
                 </div>
-                <div class="book-body">
+                <div class="booking-body">
                     <div class="book-text">
-                        <p>I'd love to have a chat to see how I can help you. The best first step is for us to discuss your project during a free consultation. Then we can move forward from there.</p>
+                        <p>I'd love to have a chat to see how I can help you. The best first step is for us to discuss
+                            your project during a free consultation. Then we can move forward from there.</p>
                     </div>
                     <div class="book-button">
                         <p><a href="#" class="free-light">Free Consultation</a></p>
@@ -212,7 +214,7 @@
                 prevEl: ".swiper-button-prev",
             },
         });
-  </script>
+    </script>
 </body>
 
 </html>
